--- a/resources/css/log.css
+++ b/resources/css/log.css
@@ -5,3 +5,16 @@
 .mid{
     text-align: center;
 }
+.box-emage {
+    height: 250px;
+}
+.image-avatar{
+    height: 30px;
+    width: 30px;
+}
+.image-post-detail {
+    height: 400px;
+}
+.image-title {
+    height: 500px;
+}
