--- a/public/css/all.css
+++ b/public/css/all.css
@@ -1564,3 +1564,14 @@ textarea.input {
 .image-title {
     height: 500px;
 }
+.image-profile{
+    height: 200px;
+    width: 200px;
+}
+.form-edit-profile{
+    margin-top: 15px;
+    text-align: center;
+}
+.error-profile{
+    color:red;
+}
